# zenii

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross-compile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  website-data.json
crates/mesoclaw-core/: Cargo.toml
crates/mesoclaw-core/src/: boot.rs  error.rs  lib.rs
crates/mesoclaw-core/src/ai/: adapter.rs  agent.rs  context.rs  mod.rs  prompt.rs  provider_registry.rs  providers.json  providers.rs  session.rs
crates/mesoclaw-core/src/channels/: format.rs  registry.rs  router.rs  traits.rs
crates/mesoclaw-core/src/channels/discord/: mod.rs
crates/mesoclaw-core/src/channels/slack/: mod.rs
crates/mesoclaw-core/src/channels/telegram/: fmt.rs  mod.rs
crates/mesoclaw-core/src/config/: mod.rs  schema.rs
crates/mesoclaw-core/src/credential/: keyring_store.rs  mod.rs
crates/mesoclaw-core/src/db/: mod.rs
crates/mesoclaw-core/src/event_bus/: mod.rs
crates/mesoclaw-core/src/gateway/: errors.rs  middleware.rs  mod.rs  openapi.rs  routes.rs  state.rs
crates/mesoclaw-core/src/gateway/handlers/: channels.rs  chat.rs  config.rs  credentials.rs  embeddings.rs  health.rs  memory.rs  messages.rs  mod.rs  models.rs  plugins.rs  providers.rs  scheduler.rs  sessions.rs  skill_proposals.rs  skills.rs  system.rs  tools.rs  ws.rs
crates/mesoclaw-core/src/identity/: loader.rs  types.rs
crates/mesoclaw-core/src/identity/defaults/: IDENTITY.md
crates/mesoclaw-core/src/memory/: embeddings.rs  in_memory_store.rs  local_embeddings.rs  mod.rs  openai_embeddings.rs  sqlite_store.rs  traits.rs  vector_index.rs
crates/mesoclaw-core/src/notification/: router.rs  routing.rs  target.rs
crates/mesoclaw-core/src/plugins/: adapter.rs  installer.rs  manifest.rs  mod.rs  process.rs  registry.rs
crates/mesoclaw-core/src/scheduler/: payload_executor.rs  tokio_scheduler.rs
crates/mesoclaw-core/src/security/: mod.rs  policy.rs
crates/mesoclaw-core/src/skills/: defaults.rs  registry.rs
crates/mesoclaw-core/src/skills/defaults/: environment-awareness.md
crates/mesoclaw-core/src/tools/: agent_self_tool.rs  channel_tool.rs  config_tool.rs  file_ops.rs  file_search.rs  learn.rs  memory_tool.rs  mod.rs  patch.rs  process.rs  registry.rs  scheduler_tool.rs  shell.rs  skill_proposal.rs  system_info.rs  traits.rs  web_search.rs
crates/mesoclaw-core/src/user/: learner.rs
crates/mesoclaw-daemon/: Cargo.toml
crates/mesoclaw-daemon/src/: main.rs
crates/mesoclaw-desktop/: Cargo.toml  mesoclaw.desktop  tauri.conf.json
crates/mesoclaw-desktop/capabilities/: default.json
crates/mesoclaw-desktop/icons/: icon.icns
crates/mesoclaw-desktop/src/: commands.rs  lib.rs
crates/mesoclaw-tui/: Cargo.toml
crates/mesoclaw-tui/src/: client.rs  handler.rs  main.rs  theme.rs
crates/mesoclaw-tui/src/ui/: chat.rs  input.rs  mod.rs  status.rs
crates/zenii/: Cargo.toml
crates/zenii-cli/: Cargo.toml
crates/zenii-cli/src/: client.rs  main.rs
crates/zenii-cli/src/commands/: channel.rs  chat.rs  config.rs  daemon.rs  embedding.rs  key.rs  memory.rs  mod.rs  onboard.rs  plugin.rs  provider.rs  run.rs  schedule.rs  wiki.rs  workflow.rs
crates/zenii-core/: Cargo.toml
crates/zenii-core/src/: boot.rs  error.rs  lib.rs  logging.rs  onboarding.rs
crates/zenii-core/src/ai/: adapter.rs  agent.rs  context.rs  mod.rs  prompt.rs  provider_registry.rs  providers.json  providers.rs  session.rs  wiki_context_plugin.rs
crates/zenii-core/src/ai/delegation/: coordinator.rs  sub_agent.rs  task.rs
crates/zenii-core/src/ai/reasoning/: continuation.rs  mod.rs
crates/zenii-core/src/channels/: contacts.rs  format.rs  message.rs  mod.rs  policy.rs  protocol.rs  registry.rs  router.rs  session_map.rs  traits.rs
crates/zenii-core/src/channels/discord/: config.rs  mod.rs
crates/zenii-core/src/channels/slack/: api.rs  fmt.rs  mod.rs
crates/zenii-core/src/channels/telegram/: config.rs  fmt.rs  mod.rs
crates/zenii-core/src/config/: mod.rs  schema.rs
crates/zenii-core/src/credential/: keyring_store.rs
crates/zenii-core/src/db/: mod.rs
crates/zenii-core/src/event_bus/: mod.rs
crates/zenii-core/src/gateway/: errors.rs  middleware.rs  mod.rs  openapi.rs  routes.rs  state.rs
crates/zenii-core/src/gateway/handlers/: approvals.rs  channels.rs  channels_test.rs  chat.rs  (+23 more)
crates/zenii-core/src/identity/: composer.rs  defaults.rs  loader.rs  mod.rs  types.rs
crates/zenii-core/src/memory/: embeddings.rs  in_memory_store.rs  local_embeddings.rs  openai_embeddings.rs  sqlite_store.rs  traits.rs  vector_index.rs
crates/zenii-core/src/notification/: mod.rs  router.rs  routing.rs
crates/zenii-core/src/plugins/: adapter.rs  installer.rs  manifest.rs  mod.rs  process.rs  registry.rs
crates/zenii-core/src/scheduler/: heartbeat.rs  mod.rs  payload_executor.rs  tokio_scheduler.rs  traits.rs
crates/zenii-core/src/security/: approval.rs  mod.rs  permissions.rs  policy.rs
crates/zenii-core/src/skills/: loader.rs  mod.rs  registry.rs  types.rs
crates/zenii-core/src/tools/: agent_self_tool.rs  channel_tool.rs  config_tool.rs  content_search.rs  file_ops.rs  file_search.rs  learn.rs  memory_tool.rs  mod.rs  patch.rs  path.rs  process.rs  registry.rs  scheduler_tool.rs  shell.rs  skill_proposal.rs  system_info.rs  traits.rs  web_search.rs  wiki_tool.rs  workflow_tool.rs
crates/zenii-core/src/user/: learner.rs  mod.rs  types.rs
crates/zenii-core/src/wiki/: convert.rs  mod.rs
crates/zenii-core/src/workflows/: definition.rs  executor.rs  mod.rs  runtime.rs  templates.rs
crates/zenii-daemon/: Cargo.toml
crates/zenii-daemon/src/: main.rs
crates/zenii-desktop/: Cargo.toml  entitlements.plist  tauri.conf.json  zenii.desktop
crates/zenii-desktop/capabilities/: default.json
crates/zenii-desktop/src/: commands.rs  lib.rs  main.rs  tray.rs
crates/zenii-tui/: Cargo.toml
crates/zenii-tui/src/: app.rs  client.rs  event.rs  handler.rs  main.rs  markdown.rs
crates/zenii-tui/src/ui/: chat.rs  help.rs  onboard.rs  sessions.rs
crates/zenii/src/: lib.rs
(+213 files in other folders)
