[package]
name = "mesoclaw-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
rusqlite = { workspace = true }
directories = { workspace = true }

# Gateway (feature-gated)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Credentials
keyring = { workspace = true, optional = true }
zeroize = { workspace = true }

# HTTP client
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }

# Phase 2: Memory + Tools
sysinfo = { workspace = true }
ignore = { workspace = true }
diffy = { workspace = true }
lru = { workspace = true }
sqlite-vec = { workspace = true }

# Phase 3: AI Agent + Gateway
rig-core = { workspace = true, optional = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

[features]
default = ["gateway", "ai"]
gateway = ["dep:axum", "dep:tower-http"]
ai = ["dep:rig-core"]
web-dashboard = ["gateway"]
channels = []
scheduler = []
keyring = ["dep:keyring"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { version = "0.5", features = ["util"] }
