[package]
name = "mesoclaw-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mesoclaw-daemon"
path = "src/main.rs"

[dependencies]
mesoclaw-core = { workspace = true, default-features = false, features = ["gateway", "ai"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true

[features]
default = ["keyring"]
keyring = ["mesoclaw-core/keyring"]
channels = ["mesoclaw-core/channels"]
scheduler = ["mesoclaw-core/scheduler"]
web-dashboard = ["mesoclaw-core/web-dashboard"]
