[package]
name = "zenii"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Zenii — AI assistant platform with desktop, CLI, TUI, and daemon interfaces"

[dependencies]
